--- a/manifest.json
+++ b/manifest.json
@@ -21,11 +21,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["main.js"]
     }
   ],
   "web_accessible_resources": [
-    "contentScript.js"
+    "main.js"
   ],
   "permissions": [
     "storage",
