--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,17 @@
   "version": "1.0",
   "description": "A basic password manager extension",
   "icons": {
-    "16": "icon-16.png",
+    /*"16": "icon-16.png",
     "48": "icon-48.png",
-    "128": "icon-128.png"
+    "128": "icon-128.png"*/
   },
   "permissions": ["activeTab"],
   "browser_action": {
     "default_popup": "index.html",
     "default_icon": {
-      "16": "icon-16.png",
+     /* "16": "icon-16.png",
       "48": "icon-48.png",
-      "128": "icon-128.png"
+      "128": "icon-128.png"*/
     }
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
